--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,16 +4,11 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
-    "formik": "^2.4.6",
-    "jspdf": "^2.5.2",
-    "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.5.1",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^4.2.4",
-    "yup": "^1.6.1"
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
